# tasktrack

./: .gitignore  .gitignore.rtf  CMakeLists.txt  README.md  README.rtf  REMADE.rtf
docs/: Implementation_plan.md  checkpoint1_reflection.md  checkpoint1_tests.md  checkpoint2_plan.md  checkpoint2_reflection.md  checkpoint2_tests.md  checkpoint3_plan.md  checkpoint3_reflection.md  checkpoint3_tests.md  final_reflection.md
include/: FileHandler.h  Task.h  TaskList.h  TaskManager.h  UserInterface.h
src/: Task.cpp  TaskList.cpp  main.cpp
tests/: test_checkpoint3.cpp
